[tool.poetry]
name = "st-server"
version = "0.2.0-preview.11"
description = ""
authors = ["Damian Ontivero <damian.ontivero@outlook.com>"]
readme = "README.md"
packages = [{include = "st_server"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
pymysql = "^1.1.0"
fastapi = "^0.100.1"
uvicorn = "^0.23.1"
werkzeug = "^2.3.6"
python-multipart = "^0.0.6"
pyjwt = "^2.8.0"
cryptography = "^41.0.2"
pytz = "^2023.3"
pika = "^1.3.2"
casbin = "^1.22.0"
casbin-sqlalchemy-adapter = "^0.5.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.7.0"
ipdb = "^0.13.13"
pytest = "^7.4.0"
pytest-factoryboy = "^2.5.1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
