[tool.poetry]
name = "st-server"
version = "0.2.0-preview.22"
description = ""
authors = ["Damian Ontivero <damian.ontivero@outlook.com>"]
readme = "README.md"
packages = [{ include = "st_server" }]

[[tool.poetry.source]]
name = "ServerTree"
url = "https://pkgs.dev.azure.com/damian-ontivero/ServerTree/_packaging/ServerTreeFeed/pypi/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
pymysql = "^1.1.0"
fastapi = "^0.100.1"
uvicorn = "^0.23.1"
werkzeug = "^2.3.6"
python-multipart = "^0.0.6"
pyjwt = "^2.8.0"
cryptography = "^41.0.2"
pytz = "^2023.3"
pika = "^1.3.2"
casbin = "^1.22.0"
casbin-sqlalchemy-adapter = "^0.5.2"
st-core = "0.3.0rc5"
# st-core = { path = "./../core.service/", develop = true }

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
ipdb = "^0.13.13"
pytest = "^7.4.3"
pytest-factoryboy = "^2.6.0"
twine = "^4.0.2"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
